add candidate technical discussion

--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -300,8 +300,8 @@ for (let i = 0; i < accordion.length; i++) {
               <span class="info-box-icon bg-warning"><i class="fa fa-commenting" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Technical Discussion (In Min) </span>
-                <span class="info-box-number">Interviewer : {{ interviewer_total_tech_time }} </span>
+                <span class="info-box-text"> Technical Discussion (In Min) </span>
+                <span class="info-box-number">Total : {{ interview_total_tech_time }} </span>
               </div>
               <!-- /.info-box-content -->
             </div>
