--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -119,6 +119,58 @@
           class="btn btn-theme-white btn-sm gr_loader"
           >Generate Report</a
         >
+        <a
+        href="#"
+        class="btn btn-theme-white btn-sm"
+        data-toggle="modal"
+        data-target="#deleteModal{{master_entry.id}}"
+      >
+        Delete</a
+      >
+      <!-- The Modal -->
+      <div
+        class="modal fade"
+        id="deleteModal{{master_entry.id}}"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="deleteModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteModalLabel">
+                Confirm Delete
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to delete this item?
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Cancel
+              </button>
+              <a
+                href="{{ url_for('delete_route', item_id=master_entry.id) }}"
+                class="btn btn-danger"
+                >Delete</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
         {% endif %} {% endif %} {% if master_entry.candidate.video_analysis_status ==
         "pending" %}
         
