--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -76,7 +76,7 @@
                   <button type="button" class="accordion-button" data-bs-toggle="collapse"
                     data-bs-target="#accordion1" aria-expanded="false" aria-controls="accordion1">
                     <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
-                      Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
+                      Weak Words <span class="badge btn-danger words_rounded" style="float:right;"> {{ words['weak_words'] | count }}</span>
                   </button>
                 </h2>
                 <div id="accordion1" class="accordion-collapse collapse show add-extra-css"
@@ -99,7 +99,7 @@
                   <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
                     data-bs-target="#accordion2" aria-expanded="false" aria-controls="accordion2">
                     <i class="fa fa-map-signs" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
-                      Filler Words  <span class="badge btn-danger words_rounded" style="margin-left: 75%;">{{ words['filler_words'] | count }}</span>
+                      Filler Words  <span class="badge btn-danger words_rounded" style="float:right;">{{ words['filler_words'] | count }}</span>
                   </button>
                 </h2>
             <div id="accordion2" class="accordion-collapse collapse add-extra-css"
@@ -142,7 +142,7 @@
                     <button type="button" class="accordion-button" data-bs-toggle="collapse"
                       data-bs-target="#accordion3" aria-expanded="false" aria-controls="accordion3">
                       <i class="fa fa-history" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
-                        Weak Words <span class="badge btn-danger words_rounded" style="margin-left: 74%;"> {{ words['weak_words'] | count }}</span>
+                        Weak Words <span class="badge btn-danger words_rounded" style="float: right;"> {{ words['weak_words'] | count }}</span>
                     </button>
                   </h2>
                 <div id="accordion3" class="accordion-collapse collapse show add-extra-css"
@@ -165,7 +165,7 @@
                   <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse"
                     data-bs-target="#accordion4" aria-expanded="false" aria-controls="accordion4">
                     <i class="fa fa-map-signs" aria-hidden="true" style="color: #aa142d"></i>&nbsp;
-                    Filler Words <span class="badge btn-danger words_rounded" style="margin-left: 75%;">{{ words['filler_words'] | count }}</span>
+                    Filler Words <span class="badge btn-danger words_rounded" style="float:right;">{{ words['filler_words'] | count }}</span>
                   </button>
                 </h2>
             <div id="accordion4" class="accordion-collapse collapse add-extra-css"
@@ -266,10 +266,10 @@ for (let i = 0; i < accordion.length; i++) {
     <!--start-->
 
      <section class="content">
-      <div class="container-fluid">
+      <div class="container-fluid overall_insight_container">
         <h5 class="mb-2">OverAll Insights</h5>
-        <div class="row">
-          <div class="col-md-3 col-sm-6 col-12">
+        <div class="row overall_insight_row">
+          <div class="col-md-3 col-sm-12 col-xs-12">
             <div class="info-box">
               <span class="info-box-icon bg-info"><i class="fa fa-question-circle" style="color:#fff"></i></span>
 
@@ -282,7 +282,7 @@ for (let i = 0; i < accordion.length; i++) {
             <!-- /.info-box -->
           </div>
           <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="col-md-3 col-sm-12 col-xs-12">
             <div class="info-box">
               <span class="info-box-icon bg-success"><i class="fa fa-text-height" style="color:#fff"></i></span>
 
@@ -295,7 +295,7 @@ for (let i = 0; i < accordion.length; i++) {
             <!-- /.info-box -->
           </div>
           <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="col-md-3 col-sm-12 col-xs-12">
             <div class="info-box">
               <span class="info-box-icon bg-warning"><i class="fa fa-commenting" style="color:#fff"></i></span>
 
@@ -308,7 +308,7 @@ for (let i = 0; i < accordion.length; i++) {
             <!-- /.info-box -->
           </div>
           <!-- /.col -->
-          <div class="col-md-3 col-sm-6 col-12">
+          <div class="col-md-3 col-sm-12 col-xs-12">
             <div class="info-box">
               <span class="info-box-icon bg-danger"><i class="fa fa-eercast" style="color:#fff"></i></span>
 
