--- a/templates/admin/interview_analyzer/report.html
+++ b/templates/admin/interview_analyzer/report.html
@@ -15,17 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <!-- Icons. Uncomment required icon fonts -->
-    <link
-      rel="stylesheet"
-      href="{{ base_dir+'/static/admin/assets/vendor/css/core.css' }}"
-      class="template-customizer-core-css"
-    />
+  
 
     <style>
       h1 {
