--- a/templates/admin/interview_analyzer/view-report-old.html
+++ b/templates/admin/interview_analyzer/view-report-old.html
@@ -2,10 +2,7 @@
 Interview Assessment {% endblock %} {% block page_body_title %} Report | Smart
 Interview Assessment {% endblock %} {% block head_styles %}
 
-<link
-  rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link
   href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
   rel="stylesheet"
