--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -1,5 +1,3 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.3/js/bootstrap.js"></script>
 {% extends 'layouts/admin/dashboard/base.html' %}
 {% block page_title %} Smart Interview Assessment {% endblock %}
 {% block page_body_title %}
@@ -14,7 +12,7 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
 
-      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vnbyu8" id="menu-toggle-out" tabindex="0" type="button" aria-label="Toggle Insights"><svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 4L10 7L-3.93402e-07 7L-3.0598e-07 9L10 9L10 12L14 8L10 4ZM16 16L18 16L18 -7.86805e-07L16 -6.99382e-07L16 16Z" fill="#EA1B3D"></path></svg><span class="MuiTouchRipple-root css-w0pj6f"></span></button>
+      <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-vnbyu8" id="menu-toggle-out" tabindex="0" type="button" aria-label="Toggle Insights"><svg width="18" height="16" viewBox="0 0 18 16" fill="none"><path d="M10 4L10 7L-3.93402e-07 7L-3.0598e-07 9L10 9L10 12L14 8L10 4ZM16 16L18 16L18 -7.86805e-07L16 -6.99382e-07L16 16Z" fill="#EA1B3D"></path></svg><span class="MuiTouchRipple-root css-w0pj6f"></span></button>
       <script>
 
     $("#menu-toggle-out").click(function(e) {
@@ -49,9 +47,8 @@
 
     </script>
     <span>
-      <div class="css-5277k6 "><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1l29ab3"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#fff"></path></svg></div></span><span class="space-icon" style="padding:1%;color:#fff;font-weight: 500;font-size: 20px;">Analytics</span><span class="MuiTouchRipple-root css-w0pj6f"></span></div>
+      <div class="css-5277k6 "><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1l29ab3"><svg viewBox="0 0 12 12" fill="none"  style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#fff"></path></svg></div></span><span class="space-icon" style="padding:1%;color:#fff;font-weight: 500;font-size: 20px;">Analytics</span><span class="MuiTouchRipple-root css-w0pj6f"></span></div>
     </span>
-<!--      <button class="css-5277k6 MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation css-jjm1e4" tabindex="0" type="button"><span class="MuiButton-startIcon MuiButton-iconSizeMedium css-1l6c7y9"><div class="MuiBox-root css-1l29ab3"><svg viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 14px; height: 14px;"><path d="M1.2 3.6H1.37143C2.03143 3.6 2.57143 4.14 2.57143 4.8V10.8C2.57143 11.46 2.03143 12 1.37143 12H1.2C0.54 12 0 11.46 0 10.8V4.8C0 4.14 0.54 3.6 1.2 3.6ZM6 0C6.66 0 7.2 0.54 7.2 1.2V10.8C7.2 11.46 6.66 12 6 12C5.34 12 4.8 11.46 4.8 10.8V1.2C4.8 0.54 5.34 0 6 0ZM10.8 6.85714C11.46 6.85714 12 7.39714 12 8.05714V10.8C12 11.46 11.46 12 10.8 12C10.14 12 9.6 11.46 9.6 10.8V8.05714C9.6 7.39714 10.14 6.85714 10.8 6.85714Z" fill="#6966FD"></path></svg></div></span>Analytics<span class="MuiTouchRipple-root css-w0pj6f"></span></button>-->
 
 <div class="tabs">
   <div class="tab-2">
@@ -192,9 +189,7 @@
     <!-- /#sidebar-wrapper -->
   </div>
 
-
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{{ url_for('static', filename='assets/js/jquery-3.6.0.min.js') }}" ></script>
 <script>
   $(document).ready(function() {
     $("#menu-toggle").click(function(e) {
@@ -241,14 +236,11 @@ for (let i = 0; i < accordion.length; i++) {
 {% block head_styles %}
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap"
-  rel="stylesheet" />
+
 <link href="{{ url_for('static', filename='assets/css/details_report.css') }}" rel="stylesheet" />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="{{ url_for('static', filename='assets/js/query.slim.min.js') }}" ></script>
+<script src="{{ url_for('static', filename='assets/js/chart.js') }}"></script>
 <script src="{{ url_for('static', filename='admin/assets/js/single-report.js') }}"></script>
 
 {% endblock %} {% block body_block %}
@@ -301,7 +293,7 @@ for (let i = 0; i < accordion.length; i++) {
 
               <div class="info-box-content">
                 <span class="info-box-text"> Technical Discussion (In Min) </span>
-                <span class="info-box-number">Total : {{ interview_total_tech_time }} </span>
+                <span class="info-box-number">{{ interview_total_tech_time }} </span>
               </div>
               <!-- /.info-box-content -->
             </div>
@@ -793,3 +785,5 @@ for (let i = 0; i < accordion.length; i++) {
 
 
 {% endblock %}
+<script src="{{ url_for('static', filename='assets/js/jquery.js') }}" ></script>
+<script src="{{ url_for('static', filename='assets/js/bootstrap.js') }}" ></script>
