--- a/templates/basic.html
+++ b/templates/basic.html
@@ -24,7 +24,7 @@
 
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{{ url_for('static', filename='assets/js/jquery-3.6.0.min.js') }}" ></script>
 
 </head>
 
