--- a/templates/layouts/styles.html
+++ b/templates/layouts/styles.html
@@ -14,4 +14,4 @@
 
 <!-- Main Stylesheet -->
 <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/style.css') }}">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="{{ url_for('static', filename='assets/js/jquery-3.6.0.min.js') }}" ></script>
